--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -84,7 +84,7 @@
 body {
   min-height: 100vh;
   color: var(--color-text);
-  background: var(--color-background);
+  background: #1e1e1e;
   transition:
     color 0.5s,
     background-color 0.5s;
